// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`TableQueryVisitor should get correct query 1`] = `
{
  "params": [
    "tbl_1",
  ],
  "sql": "select "id", "name", "schema" from "undb_table" where "undb_table"."id" = ?",
}
`;

exports[`TableQueryVisitor should get correct query 2`] = `
{
  "params": [
    "table",
  ],
  "sql": "select "id", "name", "schema" from "undb_table" where "undb_table"."name" = ?",
}
`;

exports[`TableQueryVisitor should get correct query 3`] = `
{
  "params": [
    "tbl_1",
    "table",
  ],
  "sql": "select "id", "name", "schema" from "undb_table" where ("undb_table"."id" = ? or "undb_table"."name" = ?)",
}
`;

exports[`TableQueryVisitor should get correct query 4`] = `
{
  "params": [
    "tbl_1",
  ],
  "sql": "select "id", "name", "schema" from "undb_table" where not "undb_table"."id" = ?",
}
`;

exports[`TableQueryVisitor should get correct query 5`] = `
{
  "params": [
    "tbl_1",
    "table",
  ],
  "sql": "select "id", "name", "schema" from "undb_table" where (not "undb_table"."id" = ? or "undb_table"."name" = ?)",
}
`;
